[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
hex = { version = "0.4.3", default-features = false }
xcall = { path="../../xcall/contracts/solana/programs/xcall", features = ["cpi"] }
xcall-lib = { path="../../xcall/contracts/solana/libs/xcall-lib" }
rlp = { path="../../xcall/contracts/solana/libs/rlp" }
