[package]
name = "asset-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
hex = { workspace = true }
rlp = { workspace = true }
xcall-lib = { workspace = true }
xcall-manager = {path = "../xcall-manager", features=["cpi"]}
xcall = { workspace = true }
anchor-spl = "0.30.1"

