[package]
name = "xcall-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xcall_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

hex = { workspace = true }
rlp = { workspace = true }
xcall-lib = { workspace = true }
xcall = { workspace = true, features = ["cpi"] }